feat: adicionado-header-component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,31 @@
     margin: 0;
     padding: 0;
 }
+
+.font-quando {
+    font-family: "Quando", serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.font-quando-b {
+    font-family: "Quando", serif;
+    font-weight: 800;
+    font-style: normal;
+}
+
+.texto-azul{
+    color: #2BBDEE;
+}
+
+.bg-azul{
+    background-color: #2BBDEE;
+}
+
+.bg-branco-1{
+    background-color: #E4F1F7;
+}
+
+.texto-branco{
+    color: #F1F5F9;
+}
