feat: apresentacao-component

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,6 +3,7 @@ header {
     display: flex;
     justify-content: center;
     padding: 10px 10px;
+    border-bottom: 1px solid #85838334;
     article {
         max-width: 1200px;
         width: 100%;
