--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="bg-branco-1">
     <article>
         <div data-aos="fade-right" data-aos-duration="1000">
-            <img src="img/icons/logo.png" class="logo-img" alt="">
+            <img src="img/logo.png" class="logo-img" alt="">
         </div>
         <div class="grupo-button font-quando" data-aos="fade-left" data-aos-duration="1000">
             <button class="font-quando">Entrar</button>
