feat: login-component

--- a/src/app/components/apresentacao/apresentacao.component.html
+++ b/src/app/components/apresentacao/apresentacao.component.html
@@ -13,7 +13,7 @@
                     só lugar. Simples, rápido e eficiente.</h3>
             </div>
             <div class="grupo_button">
-                <button class="font-quando">Começar agora <img src="img/icons/arrow-right-icon.svg" alt=""></button>
+                <button (click)="NavegarRota()" class="font-quando" >Começar agora <img src="img/icons/arrow-right-icon.svg" alt=""></button>
                 <button class="font-quando button-custom"><a href="https://github.com/LucasAlberto0" target="_blank"
                         rel="noopener">Ver Criador</a></button>
             </div>
