--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="grupo-button font-quando" data-aos="fade-left" data-aos-duration="1000">
             <button class="font-quando">Entrar</button>
-            <button class="font-quando bg-azul button-comecar" >Começar Grátis <img src="img/icons/arrow-right-icon.svg" alt=""></button>
+            <button class="font-quando bg-azul button-comecar" (click)="NavegarRota()">Começar Grátis <img src="img/icons/arrow-right-icon.svg" alt=""></button>
         </div>
     </article>
 </header>
