--- a/src/app/components/apresentacao/apresentacao.component.scss
+++ b/src/app/components/apresentacao/apresentacao.component.scss
@@ -1,6 +1,9 @@
+
+
 main {
     display: flex;
     justify-content: center;
+    height: 100%;
 }
 
 section {
@@ -10,8 +13,7 @@ section {
     justify-content: center;
     align-items: center;
     gap: 60px;
-    height: 92vh;
-    overflow-y: auto;
+    margin: 25px 0px;
 }
 
 article {
