feat: tela-de-login-e-cadastro

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,8 +4,8 @@
             <img src="img/logo.png" class="logo-img" alt="">
         </div>
         <div class="grupo-button font-quando" data-aos="fade-left" data-aos-duration="1000">
-            <button class="font-quando">Entrar</button>
-            <button class="font-quando bg-azul button-comecar" (click)="NavegarRota()">Começar Grátis <img src="img/icons/arrow-right-icon.svg" alt=""></button>
+            <button class="font-quando" (click)="NavegarLogin()">Entrar</button>
+            <button class="font-quando bg-azul button-comecar" (click)="NavegarCadastro()">Começar Grátis <img src="img/icons/arrow-right-icon.svg" alt=""></button>
         </div>
     </article>
 </header>
