--- a/src/app/pages/cadastro/cadastro.component.scss
+++ b/src/app/pages/cadastro/cadastro.component.scss
@@ -17,6 +17,10 @@ main {
         h1 {
             color: #111;
         }
+        ul{
+            padding-left: 15px;
+            font-size: 0.8rem;
+        }
         img {
             width: 120px;
             height: 90px;
