--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,12 +1,18 @@
 <main>
-    <section>
+    <form class="font-quando">
         <img src="img/logo.png" alt="">
-        <h1>Login</h1>
-        <label for="">Email</label>
-        <input type="text">
-        <label for="">Senha</label>
-        <input type="text">
-        <button>Entrar</button>
+        <h1 class="font-quando-b">Login</h1>
+        <div class="inputs">
+            <p-floatlabel variant="in">
+                <input pInputText id="in_label" autocomplete="off" />
+                <label for="in_label">Email</label>
+            </p-floatlabel>
+            <p-floatlabel variant="in">
+                <p-password [toggleMask]="true" [feedback]="false" class="input-custom" />
+                <label for="over_label">Senha</label>
+            </p-floatlabel>
+        </div>
+        <p-button label="Entrar" />
         <a href="">Ainda não possui conta?</a>
-    </section>
+    </form>
 </main>
