feat: tabela-clientes

--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -1,5 +1,5 @@
 <main>
-    <form class="font-quando" data-aos="fade-right" data-aos-duration="1000">
+    <form class="font-quando" data-aos="fade-up" data-aos-duration="1000">
         <img src="img/logo.png" alt="">
         <h1 class="font-quando-b">Cadastro</h1>
         <div class="inputs">
