--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <main>
-    <form class="font-quando">
+    <form class="font-quando" data-aos="fade-down" data-aos-duration="1000">
         <img src="img/logo.png" alt="">
         <h1 class="font-quando-b">Login</h1>
         <div class="inputs">
