fix: tamanho-dos-inputs-do-ngprime

--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -1,6 +1,6 @@
 <main>
     <form class="font-quando" data-aos="fade-up" data-aos-duration="1000">
-        <img src="img/logo.png" alt="">
+        <a href="/"><img src="img/logo.png" alt=""></a>
         <h1 class="font-quando-b">Cadastro</h1>
         <div class="inputs">
             <p-floatlabel variant="in">
@@ -25,7 +25,7 @@
                 <label for="over_label">Repetir a senha</label>
             </p-floatlabel>
         </div>
-        <p-button label="Entrar" />
-        <a href="">Ainda não possui conta?</a>
+        <p-button label="Cadastrar" class="botao-cadastro"/>
+        <a href="/login">Já possui uma conta?</a>
     </form>
 </main>
