--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <main>
     <form class="font-quando" data-aos="fade-down" data-aos-duration="1000">
-        <img src="img/logo.png" alt="">
+        <a href="/"><img src="img/logo.png" alt=""></a>
         <h1 class="font-quando-b">Login</h1>
         <div class="inputs">
             <p-floatlabel variant="in">
@@ -12,7 +12,7 @@
                 <label for="over_label">Senha</label>
             </p-floatlabel>
         </div>
-        <p-button label="Entrar" />
-        <a href="">Ainda não possui conta?</a>
+        <p-button label="Entrar" class="botao-login"/>
+        <a href="/cadastro">Ainda não possui conta?</a>
     </form>
 </main>
