--- a/src/app/components/titulo-tabela/titulo-tabela.component.html
+++ b/src/app/components/titulo-tabela/titulo-tabela.component.html
@@ -1,6 +1,15 @@
 <section>
     <article data-aos="zoom-in" data-aos-duration="1000">
-        <h1 class="font-quando-b">Dashboard</h1>
-        <p class="font-quando">Gerencie seus clientes de forma simples e eficiente</p>
+        <div class="titulo-e-subtitulo">
+            <h1 class="font-quando-b">Dashboard</h1>
+            <p class="font-quando">Gerencie seus clientes de forma simples e eficiente</p>
+        </div>
+        <div class="total-de-clientes font-quando">
+            <img src="img/icons/usuarios-icon.svg" alt="">
+            <div>
+                <h3>Total de Clientes</h3>
+                <h2>{{totalDeClientes}}</h2>
+            </div>
+        </div>
     </article>
 </section>
