--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -13,7 +13,7 @@
             </p-floatlabel>
 
             <p-floatlabel variant="in" >
-                <p-password  inputId="in_label" [toggleMask]="true"/>
+                <p-password  inputId="in_label" [toggleMask]="true" promptLabel="Digite a senha" weakLabel="Muito simples" mediumLabel="Media" strongLabel="Forte" />
                 <label for="in_label">Senha</label>
                 <ng-template #header>
             <div class="font-semibold text-xm mb-4">Reset Password</div>
