--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,3 @@
-<app-header/>
+<app-header textoBotao="Sair" rotaBotao="/" localizacaoIcone="img/icons/sair-icon.svg" />
 <app-titulo-tabela/>
 <app-tabela-clientes/>
