feat: modal-component-e-renomeacao-do-componente-botao

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="grupo-button font-quando" data-aos="fade-left" data-aos-duration="1000">
             <!-- <button class="font-quando" (click)="NavegarLogin()" >Entrar</button> -->
-            <app-botao-header [texto]="textoBotao" [rota]="rotaBotao" [icone]="localizacaoIcone"/>
+            <app-botao-azul [texto]="textoBotao" [rota]="rotaBotao" [icone]="localizacaoIcone"/>
         </div>
     </article>
 </header>
