--- a/src/app/components/tabela-clientes/tabela-clientes.component.html
+++ b/src/app/components/tabela-clientes/tabela-clientes.component.html
@@ -2,7 +2,7 @@
     <article data-aos="zoom-in" data-aos-duration="1500">
         <div class="div-titulo-da-tabela">
             <h2 class="font-quando-b">Lista de Clientes</h2>
-            <app-botao-header icone="img/icons/plus-icon.svg" texto="Criar Cliente"/>
+            <app-botao-azul (clicado)="abrirModal()" icone="img/icons/plus-icon.svg" texto="Criar Cliente"/>
         </div>
         <div class="div-cards">
             <app-card/>
