--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,18 +1,18 @@
 <main>
-    <form class="font-quando" data-aos="fade-down" data-aos-duration="1000">
+    <form [formGroup]="loginForm" class="font-quando" data-aos="fade-down" data-aos-duration="1000">
         <a href="/"><img src="img/logo.png" alt=""></a>
         <h1 class="font-quando-b">Login</h1>
         <div class="inputs">
             <p-floatlabel variant="in">
-                <input pInputText id="in_label" autocomplete="off" />
+                <input formControlName="email" pInputText id="in_label" autocomplete="off" />
                 <label for="in_label">Email</label>
             </p-floatlabel>
             <p-floatlabel variant="in">
-                <p-password [toggleMask]="true" [feedback]="false" class="input-custom" />
+                <p-password formControlName="password" [toggleMask]="true" [feedback]="false" class="input-custom" />
                 <label for="over_label">Senha</label>
             </p-floatlabel>
         </div>
-        <p-button label="Entrar" class="botao-login"/>
+        <p-button (click)="login()" label="Entrar" class="botao-login"/>
         <a href="/cadastro">Ainda não possui conta?</a>
     </form>
 </main>
