feat: detalhes-da-conta-do-gerente

--- a/src/app/components/titulo-tabela/titulo-tabela.component.html
+++ b/src/app/components/titulo-tabela/titulo-tabela.component.html
@@ -4,6 +4,16 @@
             <h1 class="font-quando-b">Dashboard</h1>
             <p class="font-quando">Gerencie seus clientes de forma simples e eficiente</p>
         </div>
+        <div class="div-informacoes-conta">
+            
+            <div class="informacoes-conta font-quando">
+                <img src="img/icons/gerente-icon.svg" alt="">
+                <div>
+                    <h3>Conta</h3>
+                    <h2>{{nomeDaConta}}</h2>
+                    <p><img src="img/icons/empresa-icon.svg" class="img-empresa" alt=""> {{nomeDaEmpresa}}</p>
+                </div>
+            </div>
         <div class="total-de-clientes font-quando">
             <img src="img/icons/usuarios-icon.svg" alt="">
             <div>
@@ -11,5 +21,7 @@
                 <h2>{{totalDeClientes}}</h2>
             </div>
         </div>
+
+    </div>
     </article>
 </section>
