--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,6 +6,7 @@
             <p-floatlabel variant="in">
                 <input formControlName="email" pInputText id="in_label" autocomplete="off" />
                 <label for="in_label">Email</label>
+                <div></div>
             </p-floatlabel>
             <p-floatlabel variant="in">
                 <p-password formControlName="password" [toggleMask]="true" [feedback]="false" class="input-custom" />
