--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,11 +1,28 @@
 <article>
     <h2>João Silva</h2>
-    <div class="titulo-empresa"><img src="img/icons/empresa-icon.svg" alt=""><p>Tech Solutions</p></div>
+    <div class="titulo-empresa"><img src="img/icons/empresa-icon.svg" alt="">
+        <p>Tech Solutions {{ramoEmpresa}}</p>
+    </div>
     <aside div="div-campos-do-usuario">
-        <div class="div-campo"><div class="fundo-img"><img src="img/icons/email-icon.svg" alt=""></div><p>joao@email.com</p></div>
-        <div class="div-campo"><div class="fundo-img"><img src="img/icons/telefone-icon.svg" alt=""></div><p>(11) 98888-8888</p></div>
+        <div class="div-campo">
+            <div class="fundo-img"><img src="img/icons/trabalho-icon.svg" alt=""></div>
+            <p>Tecnologia</p>
+        </div>
+        <div class="div-campo">
+            <div class="fundo-img"><img src="img/icons/email-icon.svg" alt=""></div>
+            <p>joao@email.com</p>
+        </div>
+        <div class="div-campo">
+            <div class="fundo-img"><img src="img/icons/telefone-icon.svg" alt=""></div>
+            <p>(11) 98888-8888</p>
+        </div>
+        <div class="div-campo">
+            <div class="fundo-img"><img src="img/icons/localizacao-icon.svg" alt=""></div>
+            <p>Santos, Sp</p>
+        </div>
         <div class="div-button">
-            <button class="button-editar"><img src="img/icons/edit-icon.svg" alt="">Editar</button>
+            <button class="button-editar" (click)="editarProduto()"><img src="img/icons/edit-icon.svg"
+                    alt="">Editar</button>
             <button class="button-excluir"><img src="img/icons/delete-icon.svg" alt="">Excluir</button>
         </div>
     </aside>
