--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -43,6 +43,17 @@ form {
         font-size: 12px;
         margin-top: 2px;
     }
+    .input-seletor{
+        
+        background-color: #FFFAFA;
+        border: 2px solid #b5afaf5d;
+        border-radius: 10px;
+        margin: 0;
+        &::placeholder{
+            color: #353434d0;
+            opacity: 0.6;
+        }
+    }
 }
 
 
