--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -9,7 +9,7 @@
                 <div></div>
             </p-floatlabel>
             <p-floatlabel variant="in">
-                <p-password formControlName="password" [toggleMask]="true" [feedback]="false" class="input-custom" />
+                <p-password formControlName="senha" [toggleMask]="true" [feedback]="false" class="input-custom" />
                 <label for="over_label">Senha</label>
             </p-floatlabel>
         </div>
