feat: remover-cliente-da-dashboard

--- a/src/app/components/tabela-clientes/tabela-clientes.component.html
+++ b/src/app/components/tabela-clientes/tabela-clientes.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="div-cards">
             @for (clientes of clientes; track $index) {
-                <app-card [cliente]="clientes" (editar)="abrirModal(clientes)"/>
+                <app-card [cliente]="clientes" (editar)="abrirModal(clientes)" (clienteDeletado)="removerCliente($event)"/>
             }      
         </div>
     </article>
