--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<article>
+<article data-aos="zoom-in" data-aos-duration="1500">
     <h2>{{cliente?.nome}}</h2>
     <div class="titulo-empresa"><img src="img/icons/empresa-icon.svg" alt="">
         <p>{{cliente?.nomeDaEmpresa}}</p>
@@ -23,7 +23,7 @@
         <div class="div-button">
             <button class="button-editar" (click)="editar.emit(cliente)"><img src="img/icons/edit-icon.svg"
                     alt="">Editar</button>
-            <button class="button-excluir"><img src="img/icons/delete-icon.svg" alt="">Excluir</button>
+            <button class="button-excluir" (click)="excluir()"><img src="img/icons/delete-icon.svg" alt="">Excluir</button>
         </div>
     </aside>
 </article>
