style: animacao-do-card-do-cliente

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<article>
+<article class="card-animacao">
     <h2>{{cliente?.nome}}</h2>
     <div class="titulo-empresa"><img src="img/icons/empresa-icon.svg" alt="">
         <p>{{cliente?.nomeDaEmpresa}}</p>
