feat: validacoes-com-toast-na-pagina-de-cadastro

--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -1,4 +1,5 @@
 <main>
+    <p-toast/>
     <form [formGroup]="cadastroForm" class="font-quando" data-aos="fade-up" data-aos-duration="1000">
         <a href="/"><img src="img/logo.png" alt=""></a>
         <h1 class="font-quando-b">Cadastro</h1>
