--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,5 @@
 <main>
+    <p-toast/>
     <form [formGroup]="loginForm" class="font-quando" data-aos="fade-down" data-aos-duration="1000">
         <a href="/"><img src="img/logo.png" alt=""></a>
         <h1 class="font-quando-b">Login</h1>
