feat: validacoes-com-toast-no-modal-de-clientes

--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,3 +1,4 @@
+<p-toast/>
 <form [formGroup]="formCliente" (ngSubmit)="salvar()" class=" form-container">
     <div>
         <h2 class="font-quando-b" mat-dialog-title>
@@ -16,8 +17,7 @@
 
     <input matInput formControlName="ramoDaEmpresa" required maxlength="40" placeholder="Digite o ramo da empresa" />
 
-    <input matInput formControlName="telefone" required placeholder="(11) 98888-8888" />
-
+    <p-inputMask formControlName="telefone" mask="(99) 99999-9999" placeholder="(11) 98888-8888" class="input-telefone"></p-inputMask>
 
     <input matInput formControlName="cidade" required placeholder="Digite a cidade da empresa" />
 
